--- a/alpha/app/templates/index2.html
+++ b/alpha/app/templates/index2.html
@@ -16,37 +16,18 @@
 <style>
     .nav a {
             color: #5a5a5a;
-            font-size: 12px;
+            font-size: 16px;
             font-weight: bold;
             padding: 14px 10px;
             text-transform: uppercase;
+            position: fixed;
+
             }
 
     .nav li {
     display: inline;
     }
 
-    .jumbotron {
-    background-image:url('https://goo.gl/04j7Nn');
-    height: 300px;
-    }
-
-    .jumbotron .container {
-    position: relative;
-    top:100px;
-    }
-
-    .jumbotron h1 {
-    color: #fff;
-    font-size: 48px;
-    font-family: 'Shift', sans-serif;
-    font-weight: bold;
-    }
-
-    .jumbotron p {
-    font-size: 20px;
-    color: #fff;
-    }
 
     .learn-more {
     background-color: #f7f7f7;
@@ -84,8 +65,8 @@
   <div class="nav">
     <div class="container">
       <ul class="pull-left">
-        <li><a href="#">公司名</a></li>
-        <li><a href="#">搜索</a></li>
+        <li><a href="#">B</a></li>
+        <li><a href="#">伴学: 专业的课外辅导</a></li>
       </ul>
       <ul class="pull-right">
         <li><a href="#">成为导师</a></li>
@@ -96,12 +77,13 @@
     </div>
   </div>
 
-  <div class="jumbotron">
-    <div class="container">
-      <h1>TBD</h1>
-      <p>&nbsp&nbsp&nbsp&nbsp 辅导，答疑，信息分享</p>
-    </div>
+  <div class="learn-more">
+     <div class="container">
+       <h2>探探</h2>
+
+     </div>
   </div>
+
 
 
 
@@ -149,7 +131,7 @@
 
   <div class="learn-more">
      <div class="container">
-       <h2>XX辅导</h2>
+       <h2>考试辅导</h2>
        <div class="row">
           <div class="col-md-5">
                <h3>PTE</h3>
