--- a/alpha/app/templates/homework_mentor.html
+++ b/alpha/app/templates/homework_mentor.html
@@ -80,17 +80,18 @@
 {% block content %}
 <body>
 
+{% for mentor in mentors%}
 <div class="mentor-style">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
         <div class="box">
-          <img src="{{url_for('static',filename='mentors_pic/mr1.jpg')}}" height="150" width="120"/>
+          <img src="{{url_for('static',filename=mentor.pic_path)}}" height="150" width="120"/>
         </div>
         <div class="content">
-          <p class="title">Joanne</p>
-          <p class="sub-title">Accounting, Finance</p>
-          <p class="sub-title">5 years teaching experience, familiar with all the related courses details.</p>
+          <p class="title">{{mentor.full_name}}</p>
+          <p class="sub-title">{{mentor.domain}}</p>
+          <p class="sub-title">{{mentor.introduction}}</p>
           <a href="#">了解更多</a>
           <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
         </div>
@@ -106,17 +107,19 @@
           <a href="#" class="button">联系导师</a>
         </div>
       </div>
-
     </div>
   </div>
 </div>
+{% endfor %}
 
+
+<!--
 <div class="mentor-style">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
         <div class="box">
-          <img src="{{url_for('static',filename='mentors_pic/mr2.jpg')}}" height="150" width="120"/>
+          <img src="{{url_for('static',filename='mr2.jpg')}}" height="150" width="120"/>
         </div>
         <div class="content">
           <p class="title">Gordon</p>
@@ -128,9 +131,8 @@
       </div>
       <div class="col-md-4">
         <div>
-          <!--
+
           <button type="button" onclick="alert('Hello world!')">尝试预约</button>
-          -->
           <a href="{{ url_for('main.booking_mask') }}" class="button">尝试预约</a>
         </div>
         <div>
@@ -147,7 +149,7 @@
     <div class="row">
       <div class="col-md-8">
         <div class="box">
-          <img src="{{url_for('static',filename='mentors_pic/mr3.jpg')}}" height="150" width="120"/>
+          <img src="{{url_for('static',filename='mr3.jpg')}}" height="150" width="120"/>
         </div>
         <div class="content">
           <p class="title">Brian</p>
@@ -159,9 +161,9 @@
       </div>
       <div class="col-md-4">
         <div>
-          <!--
+
           <button type="button" onclick="alert('Hello world!')">尝试预约</button>
-          -->
+
           <a href="{{ url_for('main.booking_mask') }}" class="button">尝试预约</a>
         </div>
         <div>
@@ -172,6 +174,8 @@
     </div>
   </div>
 </div>
+-->
+
 
 
 
