--- a/alpha/app/templates/booking_mentor.html
+++ b/alpha/app/templates/booking_mentor.html
@@ -82,7 +82,7 @@
 
 
 <div class="mentor-style">
-  YoYo
+  {{mentor_full_name}}
   <div class="container">
     <div class="row">
       <div class="col-md-8">
