--- a/alpha/app/templates/homework_mentor.html
+++ b/alpha/app/templates/homework_mentor.html
@@ -101,7 +101,7 @@
           <!--
           <button type="button" onclick="alert('Hello world!')">尝试预约</button>
           -->
-          <a href="{{ url_for('main.booking_mask') }}" class="button">尝试预约</a>
+          <a href="{{ url_for('main.booking_mentor', mentor_full_name=mentor.full_name) }}" class="button">尝试预约</a>
         </div>
         <div>
           <a href="#" class="button">联系导师</a>
@@ -111,71 +111,6 @@
   </div>
 </div>
 {% endfor %}
-
-
-<!--
-<div class="mentor-style">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="box">
-          <img src="{{url_for('static',filename='mr2.jpg')}}" height="150" width="120"/>
-        </div>
-        <div class="content">
-          <p class="title">Gordon</p>
-          <p class="sub-title">Statistics, Finance</p>
-          <p class="sub-title">5 years teaching experience, familiar with all the related courses details.</p>
-          <a href="#">了解更多</a>
-          <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div>
-
-          <button type="button" onclick="alert('Hello world!')">尝试预约</button>
-          <a href="{{ url_for('main.booking_mask') }}" class="button">尝试预约</a>
-        </div>
-        <div>
-          <a href="#" class="button">联系导师</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<div class="mentor-style">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="box">
-          <img src="{{url_for('static',filename='mr3.jpg')}}" height="150" width="120"/>
-        </div>
-        <div class="content">
-          <p class="title">Brian</p>
-          <p class="sub-title">Law</p>
-          <p class="sub-title">5 years teaching experience, familiar with all the related courses details.</p>
-          <a href="#">了解更多</a>
-          <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div>
-
-          <button type="button" onclick="alert('Hello world!')">尝试预约</button>
-
-          <a href="{{ url_for('main.booking_mask') }}" class="button">尝试预约</a>
-        </div>
-        <div>
-          <a href="#" class="button">联系导师</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
--->
-
 
 
 
