--- a/alpha/app/templates/booking_mentor.html
+++ b/alpha/app/templates/booking_mentor.html
@@ -19,11 +19,11 @@
       background-color: #ffffff;
       margin-top: 200px;
     }
-    .box {
+    .box-small {
       display: inline-block;
       vertical-align: top;
-      width: 121px;
-      height: 151px;
+      width: 50px;
+      height: 50px;
       background: #ffffff;
       margin: 5px;
       border:3px solid #FFAE46;
@@ -82,32 +82,20 @@
 
 
 <div class="mentor-style">
-  {{mentor_full_name}}
   <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="box">
+    <div class="box-small">
 
-        </div>
-        <div class="content">
-          <p class="title">Joanne</p>
-          <p class="sub-title">Accounting, Finance</p>
-          <p class="sub-title">5 years teaching experience, familiar with all the related courses details.</p>
-          <a href="#">了解更多</a>
-          <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div>
-          <!--
-          <button type="button" onclick="alert('Hello world!')">尝试预约</button>
-          -->
-          <a href="#" class="button">尝试预约</a>
-        </div>
-        <div>
-          <a href="#" class="button">联系导师</a>
-        </div>
-      </div>
+    </div>
+    <div class="content">
+      <p class="title">{{mentor_full_name}}</p>
+
+    </div>
+
+    <div class="row">
+
+
+
+
 
     </div>
   </div>
