--- a/alpha/app/static/styles.css
+++ b/alpha/app/static/styles.css
@@ -1,108 +1,149 @@
 
-.profile-thumbnail {
-    position: absolute;
+.mentor-style {
+  background-color: #ffffff;
+  margin-top: 200px;
 }
-.profile-header {
-    min-height: 260px;
-    margin-left: 280px;
+.box-small {
+  display: inline-block;
+  vertical-align: top;
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  margin: 5px;
 }
-div.post-tabs {
-    margin-top: 16px;
+.content {
+  display: inline-block;
+  vertical-align: top;
 }
-ul.posts {
-    list-style-type: none;
-    padding: 0px;
-    margin: 16px 0px 0px 0px;
-    border-top: 1px solid #e0e0e0;
+.title, .sub-title {
+  margin: 0;
+  padding: 3px 10px 3px 0;
 }
-div.post-tabs ul.posts {
-    margin: 0px;
-    border-top: none;
+.title {
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Montserrat';
 }
-ul.posts li.post {
-    padding: 8px;
-    border-bottom: 1px solid #e0e0e0;
+.sub-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: #3F3F3F;
 }
-ul.posts li.post:hover {
-    background-color: #f0f0f0;
+.selection {
+  font-size: 15px;
+  font-weight: bold;
+  color: #3F3F3F;
 }
-div.post-date {
-    float: right;
+
+.button {
+  background-color: #FFD853;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: 'Montserrat';
+  color: #3F3F3F;
+  margin: 2px 2px;
+  cursor: pointer;
 }
-div.post-author {
-    font-weight: bold;
+p {
+  font-family: 'Montserrat';
+  font-size: 16px;
 }
-div.post-thumbnail {
-    position: absolute;
+div.row {
+  border-top-style: solid;
+  border-top-color: #FFAE46;
 }
-div.post-content {
-    margin-left: 48px;
-    min-height: 48px;
+div.col-md-8 {
+  margin-top: 20px;
 }
-div.post-footer {
-    text-align: right;
+div.col-md-4 {
+  margin-top: 20px;
 }
-ul.comments {
-    list-style-type: none;
-    padding: 0px;
-    margin: 16px 0px 0px 0px;
+
+@import url( https://fonts.googleapis.com/css?family=Montserrat );
+
+.clearfix{*zoom:1}.clearfix:before,.clearfix:after{display:table;line-height:0;content:""}.clearfix:after{clear:both}
+
+.calender{
+  margin:40px auto;
+  width:70%;
+  padding:20px;
+  background:#f7f7f7;
+  border:1px solid #ccc;
+  color:#FFAE46;
+  position:relative;
 }
-ul.comments li.comment {
-    margin-left: 32px;
-    padding: 8px;
-    border-bottom: 1px solid #e0e0e0;
+
+.calender:before,
+.calender:after{
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  box-shadow: inherit;
+  -webkit-transform: rotate(2deg);
+  box-shadow:0 0 20px rgba(0,0,0,.4);
 }
-ul.comments li.comment:nth-child(1) {
-    border-top: 1px solid #e0e0e0;
+
+.calender::after{ -webkit-transform: rotate(-1deg) }
+
+.calender h1{
+  font-family:'Montserrat';
+  width:100%;
+  text-align:center;
+  text-shadow:1px 1px 0px rgba(0,0,0,.6);
 }
-ul.comments li.comment:hover {
-    background-color: #f0f0f0;
+
+.calender .title{
+  display:block;
+  width:13.5%;
+  height:0;
+  padding-top:6%;
+  padding-bottom:3%;
+  float:left;
+  text-align:center;
+  background:#f7f7f7;
+  font-family:'Montserrat';
+  font-size:1.4em;
 }
-div.comment-date {
-    float: right;
+
+.calender .day{
+  display:block;
+  width:13.5%;
+  height:0;
+  padding-top:6%;
+  padding-bottom:8%;
+  float:left;
+  text-align:center;
+  background:#ddd;
+  border:1px solid #f7f7f7;
+  font-family:sans-serif;
+  font-size:1.4em;
+  -webkit-transition: all .2s ease;
+  cursor:pointer;
 }
-div.comment-author {
-    font-weight: bold;
+
+.calender .day:hover{
+  background:#FFAE46;
+  color:#f7f7f7;
+  box-shadow:inset 0 0 20px rgba(0,0,0,.4);
+  text-shadow:1px 1px 2px rgba(0,0,0,.4);
 }
-div.comment-thumbnail {
-    position: absolute;
-}
-div.comment-content {
-    margin-left: 48px;
-    min-height: 48px;
-}
-div.comment-form {
-    margin: 16px 0px 16px 32px;
-}
-div.pagination {
-    width: 100%;
-    text-align: right;
-    padding: 0px;
-    margin: 0px;
-}
-div.flask-pagedown-preview {
-    margin: 10px 0px 10px 0px;
-    border: 1px solid #e0e0e0;
-    padding: 4px;
-}
-div.flask-pagedown-preview h1 {
-    font-size: 140%;
-}
-div.flask-pagedown-preview h2 {
-    font-size: 130%;
-}
-div.flask-pagedown-preview h3 {
-    font-size: 120%;
-}
-.post-body h1 {
-    font-size: 140%;
-}
-.post-body h2 {
-    font-size: 130%;
-}
-.post-body h3 {
-    font-size: 120%;
-}
-.table.followers tr {
-    border-bottom: 1px solid #e0e0e0;
+
+.calender .day.current{
+  background:#FFAE46;
+  color:#f7f7f7;
+  box-shadow:inset 0 0 20px rgba( 0,0,0, .4);
+  text-shadow:1px 1px 2px rgba(0,0,0,.4);
 }
