--- a/alpha/app/templates/booking_mentor.html
+++ b/alpha/app/templates/booking_mentor.html
@@ -10,7 +10,7 @@
 {% block head %}
 {{ super() }}
 
-<link href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+<link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css">
 <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 
@@ -121,6 +121,19 @@
       text-shadow:1px 1px 0px rgba(0,0,0,.6);
     }
 
+    .calender .title{
+      display:block;
+      width:13.5%;
+      height:0;
+      padding-top:6%;
+      padding-bottom:4%;
+      float:left;
+      text-align:center;
+      background:#f7f7f7;
+      font-family:'Montserrat';
+      font-size:1.0em;
+    }
+
     .calender .day{
       display:block;
       width:13.5%;
@@ -149,23 +162,43 @@
       color:#f7f7f7;
       box-shadow:inset 0 0 20px rgba( 0,0,0, .4);
       text-shadow:1px 1px 2px rgba(0,0,0,.4);
+    }
 
-     .btn{
-       padding: 10px 20px;
-       font-size: 20px;
-       border-radius: 10px;
-       border:1px solid #f7f7f7;
-       text-align:center;
-       background:#ddd;
-       font-family:sans-serif;
-       -webkit-transition: all .2s ease;
-      }
+    .timeframe{
+      margin:40px auto;
+      width:70%;
+      padding:20px;
+      background:#f7f7f7;
+      border:1px solid #ccc;
+      color:#FFAE46;
+      position:relative;
+    }
 
-      @include media-breakpoint-between(xs,sm){
-        .btn {
-            @include button-size($input-btn-padding-y-sm, $input-btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
-        }
-      }
+    
+
+    .timeframe h1{
+      font-family:'Montserrat';
+      width:100%;
+      text-align:center;
+      text-shadow:1px 1px 0px rgba(0,0,0,.6);
+    }
+
+    .timeframe .time{
+      display:block;
+      width:100%;
+      height:0;
+      padding-top:8%;
+      padding-bottom:10%;
+      float:left;
+      text-align:center;
+      background:#ddd;
+      border:1px solid #f7f7f7;
+      font-family:sans-serif;
+      font-size:1.4em;
+      -webkit-transition: all .2s ease;
+      cursor:pointer;
+    }
+
 
 
 </style>
@@ -233,61 +266,71 @@
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="card-block">
+                <form action="" method="post">
+                  {{ form.csrf }}
+                  <div class="col-md-8">
+                    <div class="calender">
+                      <h1>March - 2018</h1>
+                        <span class="title" name="weekday">Sun</span>
+                        <span class="title" name="weekday">Mon</span>
+                        <span class="title" name="weekday">Tue</span>
+                        <span class="title" name="weekday">Wed</span>
+                        <span class="title" name="weekday">Thu</span>
+                        <span class="title" name="weekday">Fri</span>
+                        <span class="title" name="weekday">Sat</span>
+                        <button class="day" type="submit" name="day" value="0"></button>
+                        <button class="day" type="submit" name="day" value="0"></button>
+                        <button class="day" type="submit" name="day" value="0"></button>
+                        <button class="day" type="submit" name="day" value="0"></button>
+                        <button class="day current" type="submit" name="day" value="1">1</button>
+                        <button class="day" type="submit" name="day" value="2">2</button>
+                        <button class="day" type="submit" name="day" value="3">3</button>
+                        <button class="day" type="submit" name="day" value="4">4</button>
+                        <button class="day" type="submit" name="day" value="5">5</button>
+                        <button class="day" type="submit" name="day" value="6">6</button>
+                        <button class="day" type="submit" name="day" value="7">7</button>
+                        <button class="day" type="submit" name="day" value="8">8</button>
+                        <button class="day" type="submit" name="day" value="9">9</button>
+                        <button class="day" type="submit" name="day" value="10">10</button>
+                        <button class="day" type="submit" name="day" value="11">11</button>
+                        <button class="day" type="submit" name="day" value="12">12</button>
+                        <button class="day" type="submit" name="day" value="13">13</button>
+                        <button class="day" type="submit" name="day" value="14">14</button>
+                        <button class="day" type="submit" name="day" value="15">15</button>
+                        <button class="day" type="submit" name="day" value="16">16</button>
+                        <button class="day" type="submit" name="day" value="17">17</button>
+                        <button class="day" type="submit" name="day" value="18">18</button>
+                        <button class="day" type="submit" name="day" value="19">19</button>
+                        <button class="day" type="submit" name="day" value="20">20</button>
+                        <button class="day" type="submit" name="day" value="21">21</button>
+                        <button class="day" type="submit" name="day" value="22">22</button>
+                        <button class="day" type="submit" name="day" value="23">23</button>
+                        <button class="day" type="submit" name="day" value="24">24</button>
+                        <button class="day" type="submit" name="day" value="25">25</button>
+                        <button class="day" type="submit" name="day" value="26">26</button>
+                        <button class="day" type="submit" name="day" value="27">27</button>
+                        <button class="day" type="submit" name="day" value="28">28</button>
+                        <button class="day" type="submit" name="day" value="29">29</button>
+                        <button class="day" type="submit" name="day" value="30">30</button>
+                        <button class="day" type="submit" name="day" value="31">31</button>
 
-                <div class="calender">
-                  <div class="month">
-                    <h1>March - 2018</h1>
-                    <form action="" method="post">
-                      {{ form.csrf }}
+                        <div class="clearfix"></div>
 
-                      <div class="container">
-                        <div class="col-xs-12 col-xs-offset-0 col-sm-offset-3 col-sm-6">
-                          <button class="btn btn-group">Click me!</button>
-                        </div>
-                      </div>
-
-                      <div class="btn-group btn-group-lg" >
-                      <button class="btn" type="submit" name="day" value="1">1</button>
-                      <button class="btn" type="submit" name="day" value="2">2</button>
-                      <button class="btn" type="submit" name="day" value="3">3</button>
-                      <button class="btn" type="submit" name="day" value="4">4</button>
-                      <button class="btn" type="submit" name="day" value="5">5</button>
-                      <button class="btn" type="submit" name="day" value="6">6</button>
-                      <button class="btn" type="submit" name="day" value="7">7</button>
-                      </div>
-
-                      <button class="btn" type="submit" name="day" value="8">8</button>
-                      <button class="btn" type="submit" name="day" value="9">9</button>
-                      <button class="btn" type="submit" name="day" value="10">10</button>
-                      <button class="btn" type="submit" name="day" value="11">11</button>
-                      <button class="btn" type="submit" name="day" value="12">12</button>
-                      <button class="btn" type="submit" name="day" value="13">13</button>
-                      <button class="btn" type="submit" name="day" value="14">14</button>
-                      <button class="btn" type="submit" name="day" value="15">15</button>
-                      <button class="btn" type="submit" name="day" value="16">16</button>
-                      <button class="btn" type="submit" name="day" value="17">17</button>
-                      <button class="btn" type="submit" name="day" value="18">18</button>
-                      <button class="btn" type="submit" name="day" value="19">19</button>
-                      <button class="btn" type="submit" name="day" value="20">20</button>
-                      <button class="btn" type="submit" name="day" value="21">21</button>
-                      <button class="btn" type="submit" name="day" value="22">22</button>
-                      <button class="btn" type="submit" name="day" value="23">23</button>
-                      <button class="btn" type="submit" name="day" value="24">24</button>
-                      <button class="btn" type="submit" name="day" value="25">25</button>
-                      <button class="btn" type="submit" name="day" value="26">26</button>
-                      <button class="btn" type="submit" name="day" value="27">27</button>
-                      <button class="btn" type="submit" name="day" value="28">28</button>
-                      <button class="btn" type="submit" name="day" value="29">29</button>
-                      <button class="btn" type="submit" name="day" value="30">30</button>
-                      <button class="btn" type="submit" name="day" value="31">31</button>
-                    </form>
-
-                    <div class="clearfix"></div>
+                    </div>
                   </div>
-                </div>
+
+                  <div class="col-md-4">
+                    <div class="timeframe">
+                      <h1>Start Time</h1>
+                      <button class="time" type="submit" name="time" value="8">8:00</button>
+                      <div class="clearfix"></div>
+                    </div>
+
+                  </div>
+
+                </form>
               </div>
             </div>
-          </div>
 
     </div>
     </div>
